# minesweeper

./: .gitignore  Makefile  README.md  passenger_wsgi.py  pyproject.toml
api/: __init__.py  class_minesweeper.py
frontend/: .editorconfig  Makefile  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: Cell.vue  Field.vue  Footer.vue  InputParams.vue  MinesweeperField.vue  Navbar.vue  Settings.vue
frontend/src/components/core/game/: cell.js  field.js  utils.js
frontend/src/components/core/levels/: default-levels.js  level.js  validators.js
frontend/src/components/utils/game/: cell.js  constants.js  field-generator.js  field.js  utils.js
frontend/src/components/utils/levels/: default-levels.js  defaultLevels.js  level.js  validators.js
public_html/: index.html
public_html/css/: stylesheets_1.css  stylesheets_2.css
public_html/js/: scripts.js
public_html/js/bu/: scripts_01.js  scripts_02.js
