[tool.poetry]
name = "minesweeper"
version = "0.1.0"
description = ""
authors = ["Konstantin <freidlinks@ya.ru>"]
packages = [

]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
